--- a/GOVT496_paper.Rmd
+++ b/GOVT496_paper.Rmd
@@ -18,23 +18,23 @@ _This paper presents analysis between the relationship citizens in Washington D.
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This paper takes data from the 311 service requests system of D.C. in 2017 and analyzes which wards are requesting the most service. I delve into which particular services are most requested by ward and by administration. Then I discuss time as a factor of responsiveness to citizens needs and as a factor of efficiency for D.C.     
 
 ## Previous Research
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There's an ongoing discussion between academics about the indications of civic duty within smaller communities. Researchers have been studying this topic by analysis of 311 systems--- the amount of requests, the response times, and the type of requests are all important aspects that show the relationship citizens have with their local government.     
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The theories that motivate the analysis in this paper stem from a combination of scholars who have written journal articles on political participation in local communities. Aars and Stomsnes (2007) believe that when citizens contact their local government it demonstrates that they have a certain degree of trust in their public administrators to meet their requests. Although their studies were focused on political participation in European cities, their analysis reveals that direct contacting is correlated with strong sentiments of a representative democracy. Other scholars such as Thomas (1982) and Levine and Gershenson (2014) believe that the citizens requesting service feel entitled to government services. Thomas's theory of "clientele participation" demonstrates this ideal perfectly-- citizens who feel entitled to service will request the most service of their local government in comparison to citizens who do not feel as entitled to service. Certain wards in the D.C. request services at a higher rate than others due to their expectations of the government. This is also an example of the "social contract" at work. The local government is expected to meet the claims of its citizens in a timely and fair manner, while citizens are expected to continuously file claims on the community in an effort to make the community a better place.       
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There is an ongoing discussion between academics about the indications of civic duty within smaller communities. Researchers have been studying this topic by analysis of 311 systems--- the amount of requests, the response times, and the type of requests are all important aspects that show the relationship citizens have with their local government.     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The theories that motivate the analysis in this paper stem from a combination of scholars who have written journal articles on political participation in local communities. Aars and Stomsnes (2007) believe that when citizens contact their local government it demonstrates that they have a certain degree of trust in their public administrators to meet their requests. Although their studies were focused on political participation in European cities, their analysis reveals that direct contacting is correlated with strong sentiments of a representative democracy. Other scholars such as Thomas (1982) and Levine and Gershenson (2014) believe that the citizens requesting service feel entitled to government services. Thomas's theory of "clientele participation" demonstrates this ideal perfectly-- citizens who feel entitled to service will request the most service of their local government in comparison to citizens who do not feel as entitled to service. Certain wards in D.C. request services at a higher rate than others due to their expectations of the government. This is also an example of the "social contract" at work. The local government is expected to meet the claims of its citizens in a timely and fair manner, while citizens are expected to continuously file claims on the community in an effort to make the community a better place.       
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In support of the social contract, O'Brien's (2016) research suggests that 311 requests are associated with territorial incentives that benefit the individual and the community as a whole. For example, an individual notices cars driving through a four way stop because the stop sign is either missing or unreadable. The territorial individual files a claim through the 311 system. When the sign is replaced, drivers in this area are more cautious at the four way stop. The individual who filed the claim is now safer in his community as well as the other people who live and drive in this area. This example demonstrates the social contract's fulfillment as well.            
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Some interesting research has been done in regards to 311 request systems. A study done by Finley (2017) using New York City's over 20 million service requests in 2017 shows attitudes residents have towards the homeless. In NYC, unlike D.C. 311 services include reporting people who are homeless. Finely found two traits to reports of homelessness. The first was an act of humanity; people would report an individual as homeless to help them find the resources they need to survive. The second was less humane in that people would report the homeless to escort them out of their neighbor and into an asylum. Two opposing views of homeless are demonstrated but both support a theory explained earlier- individuals who request service of their local government trust the government to take care of the issue and feel entitled to the government's service. In this case the constituents were request the government to take care of the homeless.     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Some interesting research has been done in regards to 311 request systems. A study done by Finley (2017) using New York City's over 20 million service requests in 2017 shows attitudes residents have towards the homeless. In NYC, unlike D.C. 311 services include reporting people who are homeless. Finely found two common traits of the reports of homelessness. The first was an act of humanity; people would report an individual as homeless to help them find the resources they need to survive. The second was less humane in that people would report the homeless to escort them out of their neighbor and into an asylum. Two opposing views of homeless are demonstrated but both support a theory explained earlier- individuals who request service of their local government trust the government to take care of the issue and feel entitled to the government's service. In this case the constituents were requesting the government to take care of the homeless.     
 
 ## Methods       
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As discussed previously, contacting local government indicates levels of trust in government and levels of entitlement. I have taken the data collected from D.C. 311 phone calls in 2017 sourced from opendata.dc.gov, and have found a number of facts that show which of the 8 wards trust their government the most and have the highest levels of entitlement.The analysis of how quickly claims are resolved by administrations in D.C. also shows how well the social contract in D.C. is held between each ward and the government. Targeting which services in each ward take the longest to complete will indicate which areas D.C.'s local government must work on to quicken response time. This will inherently build more trust D.C. communities and D.C. government.     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As discussed previously, contacting local government indicates levels of trust in government and levels of entitlement. I have taken the data collected from D.C. 311 phone calls in 2017 sourced from opendata.dc.gov, and have found a number of facts that show which of the 8 wards trust their government the most and have the highest levels of entitlement.The analysis of how quickly claims are resolved by administrations in D.C. also shows how well the social contract in D.C. is held between each ward and the government. Targeting which services in each ward take the longest to complete will indicate which areas D.C.'s local government must work on to quicken response time. This will inherently build more trust between D.C. communities and D.C. government.     
 
 ## Analysis
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In order to find out which wards of D.C. trust the government the most and feel most entitled to services, I've found which wards request the most services. In order from most requested to least requested 2, 6, 5, 4, 1, 7, 3, 8.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In order to find out which wards of D.C. trust the government the most and feel most entitled to services,I have found which wards request the most services. In order from most requested to least requested 2, 6, 5, 4, 1, 7, 3, 8.
 ```{r}
 crosstab(test, row.vars = "SERVICECODE", col.vars = "WARD", type = "f")
 ```
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interestingly ward 7 and 8 have the largest disparity of income, pay the least in taxes, have own less D.C. property in comparison to the other 6 wards. Because of these, Wards 7 and 8 feel less ownership and less territorial of their community and request less service of the government. These two wards participation shows that they feel less entitled and less trust of D.C.'s government. Might this be because D.C.'s government responds to Wards 7 and 8 slower than to the other 6 wards?                
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interestingly Ward 7 and 8 have the largest disparity of income, pay the least in taxes, own less D.C. property in comparison to the other 6 wards. Because of this, Wards 7 and 8 feel less ownership and less territorial of their community and request less service of the government. These two wards participation shows that they feel less entitled and less trust of D.C.'s government. Might this be because D.C.'s government responds to Wards 7 and 8 slower than to the other 6 wards?                
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The time it takes for administrations to respond to citizens requests indicates to the individual who much he/she is valued. If the local government takes longer to respond to one ward than to others, the government is signaling how much they value the opinions of the constituents in that ward. I found the average response time to the 311 service requests in each ward as follows: 1-14, 2-14, 3-15, 4-15, 5-12, 6-11, 7-12.5, 8-13. The time it takes to resolve a claim in ward 7 and 8 is actually less than the time it takes to resolve a case in wards 1, 2, 3, and 4. The difference is only by a few days. Based on this information it can be concluded that D.C.'s local government does not discriminate between wards in how quickly they respond to their needs. The question still remains...why does Ward 7 and 8 not request as much service? This question can not be answered using this data but further discussion will be included in the conclusions of this paper. 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The time it takes for administrations to respond to citizens requests indicates to the individual how much he/she is valued. If the local government takes longer to respond to one ward than to others, the government is signaling how much they value the opinions of the constituents in that ward. I found the average response time to the 311 service requests in each ward as follows: 1-14 days, 2-14 days, 3-15 days, 4-15 days, 5-12 days, 6-11 days, 7-12.5 days, 8-13 days. The time it takes to resolve a claim in ward 7 and 8 is actually less than the time it takes to resolve a case in wards 1, 2, 3, and 4. The difference is only by a few days. Based on this information it can be concluded that D.C.'s local government does not discriminate between wards in how quickly they respond to their needs. A question still remains: why do Wards 7 and 8 not request as much service? This question can not be answered using this data but further discussion will be included in the conclusions of this paper. 
 
 ```{r avgdays,  echo=FALSE}
 avgdays <- matrix(c(14,1,14,2,15,3,15,4,12,5,11,6,12.5,7,13,8),ncol=2,byrow=TRUE)
@@ -57,11 +57,11 @@ Ward 8: http://rpubs.com/jamiealexx/385639
 
 ## Conclusions and Questions
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As shown in my analysis, D.C. responds to each ward, disregarding overdue service analysis, promptly and fairly. However, it shows that Wards 7 and 8 have a different relationship with D.C.'s government than do the other wards. There are multiple theories at work here.          
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;According to O'Brien individuals who request less work on their community to be done by the government feel less tied to their community. This theory aligns with the amount of people in these wards who own versus rent their home. According to the U.S. Census Bureu, in 2017 in Ward 8, 6,358 people lived in a house they owned. Whereas as 20,384 people lived in a house they rented. In Ward 7, 11,916 people lived in a house they owned. Whereas 18,013 people lived in a house they rented. Ward 7 and 8 contrast starkly with the demographics of Ward 2, who actually requested the most service of the 8 wards. In Ward 2, in comparison to Ward 8, more than double the amount of people live in a home they own, at 14,061 people. In Ward 2 26,301 rent the house they live in. Because their are more people in Ward 2 than in Wards 7 and 8 who own property, the citizens in Ward 2 are more territorial of their community and will then request more service of their local government.        
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Feeling entitled to service, according to levine and Gershenson also has to property rights. Wards  7 and 8 are in a lower income bracket in comparison to the other 6 wards and thus pay less income tax to the government. They also pay less in property taxes because they own less land in their respected wards. Due to these two factors, Wards 7 and 8 feel less engaged with the government because they are giving the government less money. Giving the government less money makes them feel less entitled to services. This may be a factor in why these two wards request less service.                  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;According to O'Brien, individuals who request less work on their community to be done by the government, feel less tied to their community. This theory aligns with the amount of people in these wards who own versus rent their home. According to the U.S. Census Bureu, in 2017 in Ward 8, 6,358 people lived in a house they owned. Whereas as 20,384 people lived in a house they rented. In Ward 7, 11,916 people lived in a house they owned. Whereas 18,013 people lived in a house they rented. Ward 7 and 8 contrast starkly with the demographics of Ward 2, who actually requested the most service of the 8 wards. In Ward 2, in comparison to Ward 8, more than double the amount of people live in a home they own, at 14,061 people. In Ward 2 26,301 rent the house they live in. Because their are more people in Ward 2 than in Wards 7 and 8 who own property, the citizens in Ward 2 are more territorial of their community and will then request more service of their local government.        
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Feeling entitled to service, according to Levine and Gershenson also has a relationship with property rights. Wards  7 and 8 are in a lower income bracket in comparison to the other 6 wards and thus pay less income tax to the government. They also pay less in property taxes because they own less land in their respected wards. Due to these two factors, Wards 7 and 8 feel less engaged with the government because they are giving the government less money. Giving the government less money makes them feel less entitled to services. This may be a factor in why these two wards request less service.                  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The last determinant of requesting service is trust in government. According to Aars and Stomsnes, individuals who request service of the government, have a certain level of trust that the government will fulfill their request. When looking at Wards 7 and 8, the conclusion that these wards trust the government less than the other wards is open for more discussion and further research. These wards have undergone urban revitalization over the past decade. Much dispute has arisen because urban developers are "gentrifying" these areas and taking away the public housing of some of D.C.'s lowest income residents. Urban development plans may have caused citizens in Wards 7 and 8 to lose trust with D.C.'s local government. This in not a conclusive response to the citizen's mistrust of government in Wards 7 and 8 but provides some answer.This topic does require further research and can become its own research paper.     
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lastly, the analysis shows that D.C. can improve it's response time to service requests across wards. In particular the SWMA, PEMA, and TOA can improve their response time to each wards requests. Each ward has particular services that are most overdue but within each ward's top 3 overdue requests, bulk collection appears in each graph. Bulk collection can be a target for D.C.'s SWMA to improve upon.         
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Building trust between government and citizens starts at the local level. 311 service requests are a great for citizens to perform their civic duty and request their government to act to make the community a better place to live. Washington D.C.'s 311 system has shown to treat all wards equally in regards to average response times to requests but there is room for improvement. Responding to the overdue requests in a more timely manner can rebuild trust between citizens and government, and can improve the standards of living in D.C. The topic left to be further researched and worked on is how to get Ward's 7 and 8 to request more service of D.C.'s government. D.C. has some work to due in ensuring that all individuals living in the community know that the local government is there to support and fulfill the needs of its community members. 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Building trust between government and citizens starts at the local level. 311 service requests are great for citizens to perform their civic duty and request their government to act to make the community a better place to live. Washington D.C.'s 311 system has shown to treat all wards equally in regards to average response times to requests but there is room for improvement. Responding to the overdue requests in a more timely manner can rebuild trust between citizens and government, and can improve the standards of living in D.C. The topic left to be further researched and worked on is how to get Ward's 7 and 8 to request more service of D.C.'s government. D.C. has some work to due in ensuring that all individuals living in the community know that the local government is there to support and fulfill the needs of its community members. 
 ***********
 ## Works Cited
 City Service Requests 2017. opendata.dc.gov
